<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="1.0">
        <LinearLayout
                android:id="@+id/group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:orientation="vertical">

            <LinearLayout
                    android:id="@+id/line1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:orientation="horizontal">

                <TextView
                        android:text="@string/connection_type"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/textView"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp"
                        app:layout_constraintEnd_toStartOf="@+id/radioGroup"
                        android:layout_marginEnd="8dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:layout_gravity="center_vertical|end"
                        android:gravity="center_vertical|end"/>

                <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:id="@+id/radioGroup"
                        android:gravity="center"
                        android:layout_gravity="center_vertical|end">

                    <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/server"
                            android:text="@string/Server"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:gravity="start|center_vertical"
                            android:layout_gravity="start|center_vertical"/>

                    <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/client"
                            android:text="@string/Klient"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:layout_gravity="start|center_vertical"
                            android:gravity="start|center_vertical"/>
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/line2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/line1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:orientation="horizontal"
            >

                <TextView
                        android:text="@string/server_name"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/textView2"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp"
                        app:layout_constraintEnd_toStartOf="@+id/textName"
                        android:layout_marginEnd="8dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:gravity="center_vertical|end"/>

                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/textName"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:hint="@string/server_name_hint"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:inputType="text"
                        android:gravity="center_vertical|start"/>
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/line3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/line2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:orientation="horizontal"
            >
                <TextView
                        android:text="@string/server_password"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/textView3"
                        app:layout_constraintEnd_toStartOf="@+id/textPassword"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:gravity="center_vertical|end"/>
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/textPassword"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textName"
                        app:layout_constraintStart_toStartOf="parent"
                        android:hint="@string/server_password_hint"
                        android:inputType="textPassword"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:gravity="center_vertical|start"/>
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/line4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/line3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:orientation="horizontal"
            >

                <TextView
                        android:text="@string/players_count"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/textView4"
                        app:layout_constraintEnd_toStartOf="@+id/textPlayers"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp"
                        app:layout_constraintHorizontal_bias="0.782"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:gravity="center_vertical|end"/>
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/textBots"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:inputType="number"
                        app:layout_constraintTop_toBottomOf="@+id/textPlayers"
                        android:hint="@string/bots_count_hint"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:gravity="center_vertical|start" android:maxLength="1"/>
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/line5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/line4"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:orientation="horizontal"
            >
                <TextView
                        android:text="@string/bots_count"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/textView5"
                        app:layout_constraintEnd_toStartOf="@+id/textBots"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp"
                        app:layout_constraintHorizontal_bias="0.756"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:gravity="center_vertical|end"/>
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/textPlayers"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textPassword"
                        android:inputType="number"
                        android:hint="@string/players_count_hint"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:gravity="center_vertical|start" android:maxLength="1"/>
            </LinearLayout>


            <Button
                    android:text="@string/next_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    android:onClick="goToGame" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/line5"
                    android:layout_gravity="center_horizontal|center_vertical|end"/>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
